--- a/processing_scripts/Sulfide/20250926/H2Scode_multipleplates_20250926.Rmd
+++ b/processing_scripts/Sulfide/20250926/H2Scode_multipleplates_20250926.Rmd
@@ -996,16 +996,13 @@ raw_metadata_lys_year <- raw_metadata_lys %>%
   filter(str_detect(Sample_ID, Year))
 
 #separate samples into columns
-raw_metadata_lys_year <- raw_metadata_lys_year %>%
+raw_metadata_lys_combined <- raw_metadata_lys_year %>%
   separate(
     col = Sample_ID,
     sep = "_",
     into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date"),
     remove = FALSE) %>%
   rename(Evacuation_Date = Evacuation_date_YYYMMDD)
-
-raw_metadata_lys_combined <- raw_metadata_lys_year %>%
-  dplyr::select("Sample_ID", "Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Evacuation_Date", "Volume_mL", "Notes")
 
 
 #create IDs from what was collected for comparison later
@@ -1118,6 +1115,7 @@ final_data <- merged_data %>%
   dplyr::select(
     Project, Sample_ID, Zone, Grid, Depth_cm,
          Source, Volume_mL, Collection_Date, Evacuation_Date, 
+         Collection_Start_Time_24hrs, Collection_End_Time_24hrs, 
          H2S_mean, H2S_sd, H2S_cv, H2S_Conc_flag, H2S_cv_flag, H2S_QAQC_flag, Dilution, 
          Analysis_rundate, Field_notes, Run_notes
         # list columns in the order you want them
