--- a/processing_scripts/Nutrients/2024/COMPASS_TEMPEST_NUTR_Analysis_Template.Rmd
+++ b/processing_scripts/Nutrients/2024/COMPASS_TEMPEST_NUTR_Analysis_Template.Rmd
@@ -238,7 +238,7 @@ nutr_metadata <- bind_rows(raw_metadata_lys_combined, raw_metadata_sw_combined)
 nutr_metadata$Sample_ID <- NULL
 
 #Change TMP to TEMPEST in sample IDs
-nutr_metadata$NUTR_ID <- gsub("TMP", "TEMPEST", nutr_metadata$NUTR_ID)
+#nutr_metadata$NUTR_ID <- gsub("TMP", "TEMPEST", nutr_metadata$NUTR_ID)
 
 #Remove NAs from sample IDs
 nutr_metadata$NUTR_ID <- gsub("_NA_", "_", nutr_metadata$NUTR_ID)
@@ -279,7 +279,7 @@ df1 <- df_combo %>%
 head(df)
 
 df_all <- df1 %>% mutate(Run_Number = as.numeric(Run_Number),
-         Run_Date = format(as.POSIXct(Run_Time,format='%m/%d/%Y %H:%M'),format='%m/%d/%Y')) %>% mutate(Sample_Name = ifelse(Sample_Name %ilike% "TMP", gsub("TMP", "TEMPEST", Sample_Name),Sample_Name ))
+         Run_Date = format(as.POSIXct(Run_Time,format='%m/%d/%Y %H:%M'),format='%m/%d/%Y')) %>% mutate(Sample_Name = ifelse(Sample_Name %ilike% "TEMPEST", gsub("TEMPEST", "TMP", Sample_Name),Sample_Name ))
 
 #Initialize Flags
 DF_Flags <- df_all %>% dplyr::select(Run_Date) %>% distinct() %>% na.omit()
@@ -550,7 +550,7 @@ ifelse(
 NOx_peChk <- df_all_cor %>%
   filter(Test == "Vanadium NOx", #get only pe check for VNOx
          Pair_ID %ilike% "pe",
-         !Pair_ID %ilike% "Tempest")  %>% group_by(Run_Date) %>%
+         !Pair_ID %ilike% "TMP")  %>% group_by(Run_Date) %>%
   mutate(
     Mean_Chk_Conc = mean(Conc, na.rm = TRUE),
     SD_Chk_Conc = sd(Conc, na.rm = TRUE),
@@ -563,7 +563,7 @@ NOx_peChk <- df_all_cor %>%
 NH3_peChk <- df_all_cor %>%
   filter(Test == "Ammonia 2", #get only pe check for NH3
          Pair_ID %ilike% "pe",
-         !Pair_ID %ilike% "Tempest")  %>% group_by(Run_Date) %>%
+         !Pair_ID %ilike% "TMP")  %>% group_by(Run_Date) %>%
   mutate(
     Mean_Chk_Conc = mean(Conc, na.rm = TRUE),
     SD_Chk_Conc = sd(Conc, na.rm = TRUE),
@@ -575,7 +575,7 @@ NH3_peChk <- df_all_cor %>%
 PO4_peChk <- df_all_cor %>%
   filter(Test == "o-PHOS 0.3", #get only pe check for PO4
          Pair_ID %ilike% "pe",
-         !Pair_ID %ilike% "Tempest")  %>% group_by(Run_Date) %>%
+         !Pair_ID %ilike% "TMP")  %>% group_by(Run_Date) %>%
   mutate(
     Mean_Chk_Conc = mean(Conc, na.rm = TRUE),
     SD_Chk_Conc = sd(Conc, na.rm = TRUE),
@@ -724,7 +724,7 @@ blks_df <- df_all %>% filter(str_detect(Sample_Name, "CCB") | str_detect(Sample_
 
 #Pull out samples from df_all to calc quantile
 samples <- df_all %>% 
-  filter(str_detect(Sample_Name, c("TEMPEST"))) %>% 
+  filter(str_detect(Sample_Name, c("TMP"))) %>% 
   group_by(Test, Run_Date) %>% 
   mutate(Quant = quantile(Conc, prob=c(.25)) ) %>% 
   dplyr::select(Test, Run_Date, Quant) %>% 
@@ -953,7 +953,7 @@ Matrix_Flags_join <- Flags_Matrix
 
 #Pull out samples 
 samples <- df_all_cor %>%  
-  filter(str_detect(Sample_Name, c("TEMPEST")))     
+  filter(str_detect(Sample_Name, c("TMP")))     
 
 
 #Convert values based on the Test ID 
@@ -1098,7 +1098,7 @@ final_data4 <- reduce(data_list, full_join, by = c("Sample_Name"))
 #Add project information 
 final_data_labeled <- final_data4 %>% 
   mutate(
-    Site = "TEMPEST",   # new column with same value on every row
+    Site = "Tempest",   # new column with same value on every row
     Run_notes = run_notes, 
     Analysis_rundate = Run_Date# new column with notes about the run
   ) 
